# vrobot_mission

./: CMakeLists.txt  package.xml
include/vrobot_mission/: constance.hpp  vrobot_mission.hpp
include/vrobot_mission/utils/: node_thread.hpp  service_client.hpp
msg/: ActionState.msg
scripts/: service_cli.py  tmp.py
src/: main.cpp  vrobot_mission.cpp
srv/: RunMission.srv
